# co3

./: .gitignore  AG_regularization.py  GA_32x32_AWGN.py  PSO_1.ipynb  PSO_book.ipynb  PSO_book.py  PSO_dev.ipynb  PSO_tvReg.ipynb  PSO_tvReg.py  Project_AG_SA.py  README.md  pyproject.toml  requirements.txt
notes/: ae.txt  ga.txt  pso.txt
output_images/: ga_pixelwise_ssim_residual_patch32_metrics.json  ga_pixelwise_ssim_tv_patch32_metrics.json
src/image_enhancement/: __init__.py  __main__.py  main.py
src/image_enhancement/autoencoders/: __init__.py  model.py  training.py
src/image_enhancement/common/: __init__.py  constraints.py  image_io.py  objectives.py  performance.py  ssim_loss.py
src/image_enhancement/ga_patchwise/: __init__.py  blending.py  patchwise_runner.py  tile_ga.py
src/image_enhancement/genetic_algorithm/: __init__.py  ga_runner.py
src/image_enhancement/particle_swarm_opt/: __init__.py  pso_runner.py
src/image_enhancement/preprocessing/: __init__.py  nifti_to_tiff.py  noisify.py  noisify_dir.py  resize.py
src/image_enhancement/pso_patchwise/: __init__.py  patchwise_pso_runner.py  tile_pso.py
