[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "image-enhancement"
version = "0.1.0"
description = "SSIM-only denoising: preprocessing and optimization methods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "nibabel>=5.0",
    "tifffile>=2023.1",
    "imageio>=2.34",
    "torch>=2.0",
    "deap>=1.4",
]

[project.scripts]
image-enhancement = "image_enhancement.main:main"

[tool.setuptools.packages.find]
where = ["src"]
